# libmgesysutils

./: .gitignore  .travis.yml  ChangeLog  Doxyfile  Doxyfile.in  Makefile  Makefile.am  Makefile.in  NEWS  README  configure.ac  index.html  libmgesysutils  libmgesysutils-int
.github/: dependabot.yml
.github/workflows/: build-test.yml  clang-format-check.yml  publish-doxygen-gh-pages.yml
dev/: ChangeLog  Makefile.am  NEWS  README  configure.ac
dev/misc/: TODO.txt
dev/source/man/man3/remsyslog/: Makefile.am
dev/source/progs/c/inc/: configfile.h  libmgesysutils.h
dev/source/progs/c/src/: Makefile.am
dev/src/man/3/: Makefile.am  sndremsyslogmsg.3.man.in
dev/src/man/3/configfile/: parsefile.3.man.in
dev/src/man/3/remsyslog/: Makefile.am
dev/src/prg/c/inc/: Makefile.am  remsyslog.h
dev/src/prg/c/src/: libmgesysutils.pc.in
doc/: ChangeLog  Makefile.am  NEWS  README  configure.ac
doc/doxygen/: Doxyfile.in  Makefile.am  libmgesysutils-int.in  libmgesysutils.in
doc/doxygen/src/: 300-remsyslog.md
doc/misc/: branch-distro-rel.txt  distro-rel-supported.txt
doc/source/docs/doxygen/: 200-buf-msg.md  300-errors.md  400-listsandsorts.md  Doxyfile.in  Makefile.am  libmgesysutils.in
doc/src/docs/doxygen/: Makefile.am
docs/doxygen/: Doxyfile.in  Makefile.am  libmgesysutils.in
docs/doxygen/src/: 150-autotools-internal.md  200-config-file.md
html/: 100-overview_8md.html  200-config-file_8md.html  300-remsyslog_8md.html  annotated.html  annotated_dup.js  classes.html  configfile_8c.html  configfile_8c.js  configfile_8c__incl.map  configfile_8c__incl.md5  configfile_8h.html  configfile_8h.js  configfile_8h__dep__incl.md5  configfile_8h_source.html  dir_000007_000006.html  dir_000008_000006.html  dir_000009_000006.html  dir_000010_000006.html  dir_088b4e4436e06887f3fa9c5a3af9d85c.html  dir_088b4e4436e06887f3fa9c5a3af9d85c_dep.map  dir_088b4e4436e06887f3fa9c5a3af9d85c_dep.md5  dir_29196a9fd547b021dd2fe1aed517e98d.html  dir_29196a9fd547b021dd2fe1aed517e98d_dep.map  dir_29196a9fd547b021dd2fe1aed517e98d_dep.md5  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_423e4410d9f005cfc1b4ace2cdf82aa3.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6d9d64069ca2589f604ef7b0ef39e83d.html  dir_6d9d64069ca2589f604ef7b0ef39e83d.js  dir_6fe2337e1634a9e5605ea284de7a455e.html  dir_6fe2337e1634a9e5605ea284de7a455e.js  dir_6fe2337e1634a9e5605ea284de7a455e_dep.map  dir_709425c7d924ed66cb2778485fc7b5e6.html  dir_709425c7d924ed66cb2778485fc7b5e6_dep.map  dir_709425c7d924ed66cb2778485fc7b5e6_dep.md5  dir_7a0fb30acef5fd0f5f434bde09652e9a.html  dir_7a0fb30acef5fd0f5f434bde09652e9a.js  dir_7a0fb30acef5fd0f5f434bde09652e9a_dep.md5  dir_a1986ada3285f0a0ebcb94921d9f60ef.html  (+54 more)
html-int/: 100-overview_8md.html  150-autotools-internal_8md.html  200-config-file_8md.html  300-remsyslog_8md.html  annotated.html  classes.html  configfile_8c.html  configfile_8c.js  configfile_8c__incl.map  configfile_8c__incl.md5  configfile_8h.html  configfile_8h__dep__incl.map  configfile_8h__incl.map  configfile_8h__incl.md5  configfile_8h_source.html  dir_000007_000006.html  dir_000008_000006.html  dir_000009_000006.html  dir_000010_000006.html  dir_088b4e4436e06887f3fa9c5a3af9d85c.html  dir_088b4e4436e06887f3fa9c5a3af9d85c_dep.map  dir_29196a9fd547b021dd2fe1aed517e98d.html  dir_29196a9fd547b021dd2fe1aed517e98d.js  dir_29196a9fd547b021dd2fe1aed517e98d_dep.md5  dir_359d2bec989c9a8deeeb9aee335c1c76.html  dir_423e4410d9f005cfc1b4ace2cdf82aa3.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_6d9d64069ca2589f604ef7b0ef39e83d.html  dir_6fe2337e1634a9e5605ea284de7a455e.html  dir_6fe2337e1634a9e5605ea284de7a455e_dep.map  dir_6fe2337e1634a9e5605ea284de7a455e_dep.md5  dir_709425c7d924ed66cb2778485fc7b5e6.html  dir_709425c7d924ed66cb2778485fc7b5e6.js  dir_7a0fb30acef5fd0f5f434bde09652e9a.html  dir_7a0fb30acef5fd0f5f434bde09652e9a.js  dir_7a0fb30acef5fd0f5f434bde09652e9a_dep.map  dir_a1986ada3285f0a0ebcb94921d9f60ef.html  dir_aba9309797a73b547f3d5132b7fc17af.html  dir_aba9309797a73b547f3d5132b7fc17af.js  (+58 more)
html-int/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  (+23 more)
lib/: ChangeLog  Makefile.am  NEWS  README  configure.ac
lib/misc/: TODO.txt
lib/source/progs/c/src/libmgesysutils/: Makefile.am
lib/source/progs/c/src/test-configfile/: Makefile.am  noequalssign.conf.in  nomandatorykey.conf.in  nonewline.conf.in
lib/source/progs/c/src/test-remsyslog/: Makefile.am
lib/src/prg/c/inc-tmp/: Makefile.am
lib/src/prg/c/src/libmgesysutils/: Makefile.am  version.c
lib/src/prg/c/src/libmgesysutils/configfile/: configfile.c  internal.h
lib/src/prg/c/src/libmgesysutils/remsyslog/: remsyslog.c
lib/src/prg/c/src/test-configfile/: Makefile.am  main.c  noclosingbracket.conf.in  nosuchsection.conf.in  thisworks.conf.in
lib/src/prg/c/src/test-remsyslog/: Makefile.am
misc/: TODO.txt
source/progs/c/lib-tmp/: Makefile.am
source/progs/c/sysgen/inc/: Makefile.am
src/: 100-overview.md  150-autotools-internal.md
src/man/3/: Makefile.am  parsefile.3.man.in  sndremsyslogmsg.3.man.in
src/man/3/configfile/: Makefile.am
src/prg/c/inc/: Makefile.am  configfile.h  libmgesysutils.h  mge-configfile.h  mge-remsyslog.h  remsyslog.h
src/prg/c/inc-tmp/: Makefile.am
src/prg/c/inc/libmgesysutils/: Makefile.am  libmgesysutils.h  mge-configfile.h  mge-remsyslog.h  remsyslog.h
src/prg/c/lib-tmp/: Makefile.am
src/prg/c/pkg-config/: Makefile.am  libmgesysutils.pc.in
src/prg/c/src/libmgesysutils/: Makefile.am  configfile.c  remsyslog.c  version.c
src/prg/c/src/libmgesysutils/configfile/: configfile.c  internal.h
src/prg/c/src/libmgesysutils/remsyslog/: remsyslog.c
src/prg/c/src/test-configfile/: Makefile.am  fix-configfiletest.sh.in  gdbinit.in  main.c  nosuchkey.conf.in
src/prg/c/src/test-remsyslog/: Makefile.am  fix-remsyslogtest.sh.in  main.c
(+71 files in other folders)
